# tracey-runtime-public-test

./: CONTRIBUTING.md  LAM_REVIEW_NOTES.md  LIMITATIONS.md  PUBLIC_POST_DRAFT.md  QUICKSTART.md  README.md  RELEASE_CHECKLIST.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  confusion_report.md  feedback.md
docs/: architecture-overview.md  positioning.md
docs/concepts/: evidence-vs-authority.md  monitor-before-commit.md  runtime-spine.md  verification-before-completion.md
runtime/: COMPLETION_CLAIM_RULES.md  PREFLIGHT_CHECKLIST.md  README.md  TASK_RUN_PROTOCOL.md  __init__.py  run_tests.py
runtime/contracts/: __init__.py  baton.schema.json  enums.py  evidence_ledger_entry.schema.json  execution_gate.schema.json  final_result.schema.json  live_state.schema.json  memory_types.py  mirror_bridge.schema.json  monitor_output.schema.json  obsidian_vault_write.schema.json  session_status_metadata.schema.json  sleep_types.py  snapshot_candidate.schema.json  types.py  verification_record.schema.json
runtime/core/: __init__.py  baton.py  bridge.py  evidence_ledger.py  gate.py  monitor.py  verification.py
runtime/monitor/: __init__.py  commit.py  contracts.py  observability.py  preflight.py
runtime/operator_ux/: README.md  UX_USABILITY_REVIEW.md  VIEWER_LIMITS.md  generate_task_index.py  home.html  index.html  multi_task_view.html  operator_snapshot_all_tasks.json  operator_snapshot_demo_statuses.json  operator_snapshot_task_001.json  status_legend.html  task_run_index.html  task_run_index.json
runtime/templates/: final_response_checklist.template.md  (+3 more)
(+18 files in other folders)
